update: new copy across all main pages

--- a/about/index.html
+++ b/about/index.html
@@ -41,6 +41,11 @@
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li>
+              <a href="https://www.linkedin.com/in/rofyray/"
+                ><i class="icon-linkedin"></i
+              ></a>
+            </li>
+            <!-- <li>
               <a href="https://twitter.com/rofy_ray"
                 ><i class="icon-twitter"></i
               ></a>
@@ -49,7 +54,7 @@
               <a href="https://www.instagram.com/rofyray/"
                 ><i class="icon-instagram2"></i
               ></a>
-            </li>
+            </li> -->
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -58,6 +63,11 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li>
+                <a href="https://www.linkedin.com/in/rofyray/"
+                  ><i class="icon-linkedin"></i
+                ></a>
+              </li>
+              <!-- <li>
                 <a href="https://twitter.com/rofy_ray"
                   ><i class="icon-twitter"></i
                 ></a>
@@ -66,7 +76,7 @@
                 <a href="https://www.instagram.com/photozafterce7yn/"
                   ><i class="icon-instagram2"></i
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
@@ -96,11 +106,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 section-heading probootstrap-animate">
-            <h2>The Team</h2>
+            <h2>The Founder</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 probootstrap-animate">
+          <div class="col-md-12 probootstrap-animate">
             <div class="probootstrap-card probootstrap-person text-center">
               <div class="probootstrap-card-media">
                 <img
@@ -113,10 +123,7 @@
                 <h2 class="probootstrap-card-heading mb0">Rofy</h2>
                 <p><small>The Full Stack Dev Who Codes Change</small></p>
                 <p>
-                  Rofy is passionate about using his technical skills to create
-                  technology solutions that empower nonprofits and SMBs to grow
-                  and achieve their goals, while making a positive impact in the
-                  world.
+                  Rofy is passionate about applying generative AI and technical expertise to empower nonprofits and SMBs. His mission: build solutions that drive growth while advancing positive global impact.
                 </p>
                 <ul class="probootstrap-social">
                   <li>
@@ -124,16 +131,16 @@
                       ><i class="icon-linkedin"></i
                     ></a>
                   </li>
-                  <li>
+                  <!-- <li>
                     <a href="https://www.instagram.com/rofyray/" target="_blank"
                       ><i class="icon-instagram2"></i
                     ></a>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
           </div>
-          <div class="col-md-6 probootstrap-animate">
+          <!-- <div class="col-md-6 probootstrap-animate">
             <div class="probootstrap-card probootstrap-person text-center">
               <div class="probootstrap-card-media">
                 <img
@@ -172,7 +179,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -183,60 +190,35 @@
         <div class="col-md-12">
           <h2>How We Build Our Team</h2>
           <p>
-            We are a social enterprise that combines technology and social
-            impact. We use our skills and strategies to create technology
-            solutions that help nonprofits and small and medium-sized businesses
-            (SMBs) build a brand for less, and grow their businesses or causes,
-            while making a positive difference in the world. We work in four
-            simple steps:
+            We are a social enterprise combining generative AI expertise with social impact. We create AI solutions that help nonprofits and SMBs scale, innovate, and achieve their mission while making a global difference. Our process:
           </p>
-          <ul>
+          <ol>
             <li>
-              We find the right partners who share our vision and values, and
-              who need our services to enhance their brand identity and reach
-              their potential.
+              Partner with organizations that share our vision and need enterprise-grade AI solutions.
             </li>
             <li>
-              We plan with them on how best we can assist them, and devise a
-              strategy that suits their budget and timeline.
+              Plan and design strategies that fit their goals, budget, and timeline.
             </li>
             <li>
-              We deliver value to them by providing them with affordable and
-              high-quality web app and mobile app design and development, logo
-              design, architectural design, 3D design and model building, cloud
-              migration and AI solution integrations.
+              Deliver secure, affordable generative AI deployments - including LLMs, embeddings, RAG pipelines, and integration with existing systems.
             </li>
             <li>
-              We give back 15% of our profits to support smaller nonprofits and
-              social initiatives that align with our beliefs, and improve the
-              lives and well-being of the people and communities in Ghana,
-              Nigeria, and the Gambia.
+              Donate 15% of profits to support education, health, and environmental initiatives in Ghana, Nigeria, Uganda, and the Gambia.
             </li>
-          </ul>
+          </ol>
 
           <h3>Why Our Team Loves This Mission</h3>
 
           <p>
-            We love working with nonprofits and SMBs who need some help with
-            building or improving their technology solutions. We know that many
-            of them may not have the budget or the time to hire qualified
-            professionals to assist them in areas like web app and mobile app
-            design and development, logo design, architectural design, 3D design
-            and model building, cloud migration and AI solution integrations.
+            We are passionate about helping nonprofits and SMBs access enterprise-grade generative AI solutions without high costs or technical barriers. Many organizations lack resources for deploying LLMs, embeddings, RAG pipelines, or AI integrations.
           </p>
 
           <p>
-            Our core mission is to bridge this gap by providing them with
-            affordable and high-quality technology solutions that empower them
-            to grow and achieve their goals. By working with us, they also
-            support other social initiatives, as we donate 15% of our profits to
-            make a positive difference in the world.
+            Our mission bridges this gap with affordable, secure AI systems that empower growth and impact. Every engagement also funds social initiatives, donating 15% of profits to education, health, and environmental programs.
           </p>
 
           <p>
-            We believe this enables entrepreneurs and founders who may not be
-            technically skilled to focus on what they do best - offering their
-            products, services or causing change in society.
+            This approach lets entrepreneurs and founders focus on their mission while we handle the technical complexity.
           </p>
         </div>
       </div>
@@ -244,23 +226,16 @@
 
     <div class="container">
       <div class="probootstrap-cta probootstrap-animate border-bototm-none">
-        <h2 class="mb20">Want to Boost Your Technology?</h2>
+        <h2 class="mb20">Want to Boost Your Technology With AI?</h2>
         <p>
-          You have a great product, service, or cause, but you need technology
-          solutions that showcase it to the world. We can help you build those
-          solutions for less, by providing you with affordable and high-quality
-          web app and mobile app design and development, logo design,
-          architectural design, 3D design and model building, cloud migration
-          and AI solution integrations that empower you to grow your business or
-          nonprofit, and make a positive impact in the world.
+          You have a great product, service, or cause, and need AI solutions that showcase it effectively. We provide affordable, enterprise-grade generative AI - LLMs, embeddings, RAG pipelines, and secure inference - that help nonprofits and SMBs grow while advancing social impact.
         </p>
         <p>
-          Don’t wait any longer. Contact us today, and let us show you how we
-          can enhance your technology and support meaningful social causes.
+          Don’t wait. Contact us today to enhance your technology and support education, health, and environmental initiatives in West Africa.
         </p>
         <p>
           <a href="/contact/" role="button" class="btn btn-primary"
-            >Let's Connect</a
+            >Explore AI Solutions</a
           >
         </p>
       </div>
@@ -275,11 +250,7 @@
             <div class="probootstrap-footer-widget">
               <h4 class="heading">About LynxSphynx Co.</h4>
               <p>
-                We are LynxSphynx Co., a social enterprise that marries
-                technology and social impact. We help deliver a solution with a
-                precision to non-profits & small and medium-sized businesses
-                (SMBs), by providing them with innovative and affordable
-                technology solutions.
+                LynxSphynx Co. is a social enterprise uniting generative AI with social impact. We deliver precise, affordable AI solutions for nonprofits and SMBs - helping them innovate, scale, and focus on their mission.
               </p>
             </div>
           </div>
@@ -310,13 +281,18 @@
         <div class="row copyright">
           <div class="col-md-6">
             <div class="probootstrap-footer-widget">
-              <p>&copy; 2024 LynxSphynx Co. All Rights Reserved.</p>
+              <p>&copy; 2025 LynxSphynx Co. All Rights Reserved.</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="probootstrap-footer-widget right">
               <ul class="probootstrap-social">
                 <li>
+                  <a href="https://www.linkedin.com/in/rofyray/"
+                    ><i class="icon-linkedin"></i
+                  ></a>
+                </li>
+                <!-- <li>
                   <a href="https://twitter.com/rofy_ray"
                     ><i class="icon-twitter"></i
                   ></a>
@@ -325,7 +301,7 @@
                   <a href="https://www.instagram.com/rofyray/"
                     ><i class="icon-instagram2"></i
                   ></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
