--- a/contact/index.html
+++ b/contact/index.html
@@ -52,13 +52,18 @@
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li>
+              <a href="https://www.linkedin.com/in/rofyray/"
+                ><i class="icon-linkedin"></i
+              ></a>
+            </li>
+            <!-- <li>
               <a href="#"><i class="icon-twitter"></i></a>
             </li>
             <li>
               <a href="https://www.instagram.com/rofyray/"
                 ><i class="icon-instagram2"></i
               ></a>
-            </li>
+            </li> -->
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -67,6 +72,11 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li>
+                <a href="https://www.linkedin.com/in/rofyray/"
+                  ><i class="icon-linkedin"></i
+                ></a>
+              </li>
+              <!-- <li>
                 <a href="https://twitter.com/rofy_ray"
                   ><i class="icon-twitter"></i
                 ></a>
@@ -75,7 +85,7 @@
                 <a href="https://www.instagram.com/rofyray/"
                   ><i class="icon-instagram2"></i
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
@@ -192,9 +202,9 @@
             <ul class="with-icon colored">
               <li>
                 <i class="icon-mail"></i
-                ><span>&nbsp;rofydrfixed@gmail.com</span>
+                ><span>&nbsp;info@lynxsphynx.co</span>
               </li>
-              <li><i class="icon-phone2"></i><span>+1 (828) 460-5394</span></li>
+              <!-- <li><i class="icon-phone2"></i><span>+1 (828) 460-5394</span></li> -->
             </ul>
 
             <h4>Our Promise</h4>
@@ -211,11 +221,7 @@
             <div class="probootstrap-footer-widget">
               <h4 class="heading">About LynxSphynx Co.</h4>
               <p>
-                We are LynxSphynx Co., a social enterprise that marries
-                technology and social impact. We help deliver a solution with a
-                precision to non-profits & small and medium-sized businesses
-                (SMBs), by providing them with innovative and affordable
-                technology solutions.
+                LynxSphynx Co. is a social enterprise uniting generative AI with social impact. We deliver precise, affordable AI solutions for nonprofits and SMBs - helping them innovate, scale, and focus on their mission.
               </p>
             </div>
           </div>
@@ -246,13 +252,18 @@
         <div class="row copyright">
           <div class="col-md-6">
             <div class="probootstrap-footer-widget">
-              <p>&copy; 2024 LynxSphynx Co. All Rights Reserved.</p>
+              <p>&copy; 2025 LynxSphynx Co. All Rights Reserved.</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="probootstrap-footer-widget right">
               <ul class="probootstrap-social">
                 <li>
+                  <a href="https://www.linkedin.com/in/rofyray/"
+                    ><i class="icon-linkedin"></i
+                  ></a>
+                </li>
+                <!-- <li>
                   <a href="https://twitter.com/rofy_ray"
                     ><i class="icon-twitter"></i
                   ></a>
@@ -261,7 +272,7 @@
                   <a href="https://www.instagram.com/rofyray/"
                     ><i class="icon-instagram2"></i
                   ></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
