--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li>
+              <a href="https://www.linkedin.com/in/rofyray/"
+                ><i class="icon-linkedin"></i
+              ></a>
+            </li>
+            <!-- <li>
               <a href="https://twitter.com/rofy_ray"
                 ><i class="icon-twitter"></i
               ></a>
@@ -51,7 +56,7 @@
               <a href="https://www.instagram.com/rofyray/"
                 ><i class="icon-instagram2"></i
               ></a>
-            </li>
+            </li> -->
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -60,6 +65,11 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li>
+                <a href="https://www.linkedin.com/in/rofyray/"
+                  ><i class="icon-linkedin"></i
+                ></a>
+              </li>
+              <!-- <li>
                 <a href="https://twitter.com/rofy_ray"
                   ><i class="icon-twitter"></i
                 ></a>
@@ -68,7 +78,7 @@
                 <a href="https://www.instagram.com/rofyray/"
                   ><i class="icon-instagram2"></i
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
@@ -165,12 +175,10 @@
               <div class="text">
                 <h3 class="heading">Our Purpose</h3>
                 <p>
-                  We help deliver a solution with a precision to nonprofits and
-                  small business thereby providing them with high-quality
-                  technology results that empower them to grow and achieve their
-                  goals.
+                  We deliver precise, high-quality generative AI solutions tailored for nonprofits and small businesses. Our work empowers organizations to scale, streamline operations, and achieve their goals with affordable, enterprise-grade AI. 
                 </p>
-                <p><a href="/core/">Learn more</a></p>
+                <p>Partner with us to unlock value and create lasting impact.</p>
+                <p><a href="/core/">Discover Our Purpose</a></p>
               </div>
             </div>
           </div>
@@ -182,12 +190,10 @@
               <div class="text">
                 <h3 class="heading">Our Strategy</h3>
                 <p>
-                  We create value for nonprofits and SMBs by using our expertise
-                  and passion in technology, design, and innovation to deliver
-                  customized and user-friendly solutions that meet their needs
-                  and expectations.
+                  We create value for nonprofits and SMBs by applying expertise in generative AI, LLMs, and applied machine learning. We design secure, user-friendly AI systems - customized to meet unique needs while balancing cost, performance, and scalability. 
                 </p>
-                <p><a href="/core/">Learn more</a></p>
+                <p>Start a pilot today.</p>
+                <p><a href="/core/">See How We Work</a></p>
               </div>
             </div>
           </div>
@@ -199,12 +205,10 @@
               <div class="text">
                 <h3 class="heading">Our Commitment</h3>
                 <p>
-                  As a social enterprise, we donate 15% of our profits to
-                  support meaningful social causes in Ghana, Nigeria, and the
-                  Gambia, that improve the lives and well-being of the people
-                  and communities there.
+                  As a social enterprise, we donate 15% of our profits to education, health, and environmental initiatives in Ghana, Nigeria, Uganda, and the Gambia. Every AI deployment contributes to stronger communities and lasting positive change. 
                 </p>
-                <p><a href="/core/">Learn more</a></p>
+                <p>Join us as a change partner.</p>
+                <p><a href="/core/">Join the Mission</a></p>
               </div>
             </div>
           </div>
@@ -249,13 +253,9 @@
                 >
                   <div class="panel-body">
                     <p>
-                      We take care of the technical aspects of creating or
-                      improving your technology solutions, so you don’t have to.
-                      This means you have the total freedom and peace of mind to
-                      focus on what you are good at, which is running your
-                      business or nonprofit. All this comes for much less than
-                      you can find out there, anywhere!
+                      We handle the technical complexity of deploying and managing generative AI solutions, so you don’t have to. This gives you freedom to focus on running your business or nonprofit, while we ensure secure, scalable, and affordable AI infrastructure. 
                     </p>
+                    <p>Value for less. Impact for more.</p>
                   </div>
                 </div>
               </div>
@@ -283,13 +283,9 @@
                 >
                   <div class="panel-body">
                     <p>
-                      First and foremost, we get the joy of seeing a happy
-                      entrepreneur or founder. Second, you help us fulfill our
-                      passion of making social change and causing community
-                      impact. What you pay for the value you get from us also
-                      goes on to fund a social initiative somewhere across the
-                      globe.
+                      We measure success by the impact we create—helping entrepreneurs and founders achieve their goals with generative AI. Your partnership fuels our mission, with 15% of every engagement funding education, health, and environmental initiatives in Africa. 
                     </p>
+                    <p>Together, we turn AI innovation into social change.</p>
                   </div>
                 </div>
               </div>
@@ -317,12 +313,9 @@
                 >
                   <div class="panel-body">
                     <p>
-                      We become change partners! As they say, no man is an
-                      island and we strongly believe that “a little can do a
-                      lot”. You choosing our services means you not only get
-                      value for less, but also join a global group of change
-                      ambassadors.
+                      By working with us, you become a change partner. Every AI deployment delivers affordable value while joining a global network of change ambassadors driving education, health, and environmental progress. 
                     </p>
+                    <p>Together, small actions create lasting impact.</p>
                   </div>
                 </div>
               </div>
@@ -353,23 +346,16 @@
 
     <div class="container">
       <div class="probootstrap-cta probootstrap-animate">
-        <h2 class="mb20">Ready to Level Up Your Technology?</h2>
+        <h2 class="mb20">Ready to Level Up With Generative AI?</h2>
         <p>
-          You need technology solutions that reflect your vision, your mission,
-          and your personality. We can help you create those solutions for less,
-          by providing you with affordable and high-quality web app and mobile
-          app design and development, logo design, architectural design, 3D
-          design and model building, cloud migration and AI solution
-          integrations that empower you to grow your business or nonprofit, and
-          make a positive impact in the world.
+          You need AI solutions that reflect your mission and deliver measurable impact. We provide affordable, enterprise-grade generative AI - LLMs, embeddings, RAG pipelines, secure inference, and deployment - that help nonprofits and SMBs grow while advancing social change.
         </p>
         <p>
-          Don’t miss this opportunity. Contact us today, and let us show you how
-          we can transform your technology and support meaningful social causes.
+          Don’t miss this opportunity. Contact us today to explore how we can transform your operations with AI while funding education, health, and environmental initiatives in West Africa.
         </p>
         <p>
           <a href="/contact/" role="button" class="btn btn-primary"
-            >Let's Connect</a
+            >Start Your AI Journey</a
           >
         </p>
       </div>
@@ -377,7 +363,7 @@
 
     <!-- END section cta -->
 
-    <section class="probootstrap-section">
+    <!-- <section class="probootstrap-section">
       <div class="container">
         <div class="row">
           <div class="col-md-12 section-heading probootstrap-animate">
@@ -420,7 +406,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- END section -->
 
     <footer class="probootstrap-footer">
@@ -430,11 +416,7 @@
             <div class="probootstrap-footer-widget">
               <h4 class="heading">About LynxSphynx Co.</h4>
               <p>
-                We are LynxSphynx Co., a social enterprise that marries
-                technology and social impact. We help deliver a solution with a
-                precision to non-profits & small and medium-sized businesses
-                (SMBs), by providing them with innovative and affordable
-                technology solutions.
+                LynxSphynx Co. is a social enterprise uniting generative AI with social impact. We deliver precise, affordable AI solutions for nonprofits and SMBs - helping them innovate, scale, and focus on their mission.
               </p>
             </div>
           </div>
@@ -489,13 +471,18 @@
         <div class="row copyright">
           <div class="col-md-6">
             <div class="probootstrap-footer-widget">
-              <p>&copy; 2024 LynxSphynx Co. All Rights Reserved.</p>
+              <p>&copy; 2025 LynxSphynx Co. All Rights Reserved.</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="probootstrap-footer-widget right">
               <ul class="probootstrap-social">
                 <li>
+                  <a href="https://www.linkedin.com/in/rofyray/"
+                    ><i class="icon-linkedin"></i
+                  ></a>
+                </li>
+                <!-- <li>
                   <a href="https://twitter.com/rofy_ray"
                     ><i class="icon-twitter"></i
                   ></a>
@@ -504,7 +491,7 @@
                   <a href="https://www.instagram.com/rofyray/"
                     ><i class="icon-instagram2"></i
                   ></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
