--- a/projects/index.html
+++ b/projects/index.html
@@ -51,6 +51,11 @@
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li>
+              <a href="https://www.linkedin.com/in/rofyray/"
+                ><i class="icon-linkedin"></i
+              ></a>
+            </li>
+            <!-- <li>
               <a href="https://twitter.com/rofy_ray"
                 ><i class="icon-twitter"></i
               ></a>
@@ -59,7 +64,7 @@
               <a href="https://www.instagram.com/rofyray/"
                 ><i class="icon-instagram2"></i
               ></a>
-            </li>
+            </li> -->
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -68,6 +73,11 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li>
+                <a href="https://www.linkedin.com/in/rofyray/"
+                  ><i class="icon-linkedin"></i
+                ></a>
+              </li>
+              <!-- <li>
                 <a href="https://twitter.com/rofy_ray"
                   ><i class="icon-twitter"></i
                 ></a>
@@ -76,7 +86,7 @@
                 <a href="https://www.instagram.com/rofyay/"
                   ><i class="icon-instagram2"></i
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
@@ -104,20 +114,20 @@
 
     <section class="probootstrap-section">
       <div class="container">
-        <div
+        <!-- <div
           class="col-md-12 section-heading probootstrap-animate"
           style="text-align: right"
         >
           <p>click on any thumbnail to view full size color image</p>
-        </div>
+        </div> -->
 
         <div class="row">
-          <div class="col-md-12 section-heading probootstrap-animate">
-            <h2>3D Models</h2>
+          <div class="col-md-12 section-heading probootstrap-animate text-center">
+            <h2>PROJECT LISTINGS COMING SOON!</h2>
           </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="photo-gallery">
             <div class="container">
               <div class="row photos probootstrap-animate">
@@ -129,12 +139,13 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
+
       </div>
     </section>
     <!-- END section -->
 
-    <section class="probootstrap-section">
+    <!-- <section class="probootstrap-section">
       <div class="container">
         <div class="row">
           <div class="col-md-12 section-heading probootstrap-animate">
@@ -156,29 +167,21 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- END section -->
 
     <div class="container">
       <div class="probootstrap-cta probootstrap-animate border-bototm-none">
-        <h2 class="mb20">Dreaming of Better Technology?</h2>
+        <h2 class="mb20">Dreaming of Smarter Technology?</h2>
         <p>
-          You have a vision for your technology solutions, but you need some
-          help to make it happen. We can help you realize those solutions for
-          less, by providing you with affordable and high-quality web app and
-          mobile app design and development, logo design, architectural design,
-          3D design and model building, cloud migration and AI solution
-          integrations that empower you to grow your business or nonprofit, and
-          make a positive impact in the world.
+          You have a vision for your technology solutions, and we help make it a reality with affordable, enterprise-grade generative AI. From LLMs and embeddings to RAG pipelines and secure AI integrations, we empower nonprofits and SMBs to grow while driving social impact.
         </p>
         <p>
-          Don’t let your dreams fade away. Contact us today, and let us show you
-          how we can bring your technology to life and support meaningful social
-          causes.
+          Don’t let your vision wait. Contact us today to bring your AI solutions to life and support education, health, and environmental initiatives in West Africa.
         </p>
         <p>
           <a href="/contact/" role="button" class="btn btn-primary"
-            >Let's Connect</a
+            >Bring Your AI Vision to Life</a
           >
         </p>
       </div>
@@ -193,11 +196,7 @@
             <div class="probootstrap-footer-widget">
               <h4 class="heading">About LynxSphynx Co.</h4>
               <p>
-                We are LynxSphynx Co., a social enterprise that marries
-                technology and social impact. We help deliver a solution with a
-                precision to non-profits & small and medium-sized businesses
-                (SMBs), by providing them with innovative and affordable
-                technology solutions.
+                LynxSphynx Co. is a social enterprise uniting generative AI with social impact. We deliver precise, affordable AI solutions for nonprofits and SMBs - helping them innovate, scale, and focus on their mission.
               </p>
             </div>
           </div>
@@ -228,13 +227,18 @@
         <div class="row copyright">
           <div class="col-md-6">
             <div class="probootstrap-footer-widget">
-              <p>&copy; 2024 LynxSphynx Co. All Rights Reserved.</p>
+              <p>&copy; 2025 LynxSphynx Co. All Rights Reserved.</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="probootstrap-footer-widget right">
               <ul class="probootstrap-social">
                 <li>
+                  <a href="https://www.linkedin.com/in/rofyray/"
+                    ><i class="icon-linkedin"></i
+                  ></a>
+                </li>
+                <!-- <li>
                   <a href="https://twitter.com/rofy_ray"
                     ><i class="icon-twitter"></i
                   ></a>
@@ -243,7 +247,7 @@
                   <a href="https://www.instagram.com/rofyray/"
                     ><i class="icon-instagram2"></i
                   ></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
