--- a/services/index.html
+++ b/services/index.html
@@ -42,6 +42,11 @@
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li>
+              <a href="https://www.linkedin.com/in/rofyray/"
+                ><i class="icon-linkedin"></i
+              ></a>
+            </li>
+            <!-- <li>
               <a href="https://twitter.com/rofy_ray"
                 ><i class="icon-twitter"></i
               ></a>
@@ -50,7 +55,7 @@
               <a href="https://www.instagram.com/rofyray/"
                 ><i class="icon-instagram2"></i
               ></a>
-            </li>
+            </li> -->
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -59,6 +64,11 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li>
+                <a href="https://www.linkedin.com/in/rofyray/"
+                  ><i class="icon-linkedin"></i
+                ></a>
+              </li>
+              <!-- <li>
                 <a href="https://twitter.com/rofy_ray"
                   ><i class="icon-twitter"></i
                 ></a>
@@ -67,7 +77,7 @@
                 <a href="https://www.instagram.com/rofyray/"
                   ><i class="icon-instagram2"></i
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
@@ -102,15 +112,14 @@
                 <i class="icon-user-check"></i>
               </div>
               <div class="text">
-                <h3 class="heading">Free Consultation</h3>
+                <h3 class="heading">AI Strategy Consultation</h3>
                 <p>
-                  Not sure what technology solutions you might need for your
-                  business or nonprofit? Schedule a meeting with us. We’d love
-                  to help you figure it out.
+                  Not sure which generative AI solutions will bring the most value? Schedule a meeting with us. We help you identify opportunities for LLMs, RAG pipelines, and AI integrations that fit your mission and budget.
                 </p>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="service left-icon probootstrap-animate">
               <div class="icon">
@@ -118,18 +127,30 @@
               </div>
               <div class="text">
                 <h3 class="heading">
-                  Web App and Mobile App Design and Development
+                  AI-Powered Application Development
                 </h3>
                 <p>
-                  Having a presence online is essential for your business or
-                  nonprofit. We can make that happen for you - whether you need
-                  a web app or a simple informational site, or a mobile app that
-                  connects you with your customers or supporters.
+                  Your organization needs smart digital tools. We build AI-enhanced web and mobile applications that connect with your audience, automate workflows, and drive measurable results.
                 </p>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
+            <div class="service left-icon probootstrap-animate">
+              <div class="icon">
+                <i class="icon-cloud-check"></i>
+              </div>
+              <div class="text">
+                <h3 class="heading">Cloud & AI Infrastructure</h3>
+                <p>
+                  We help migrate systems to secure, scalable cloud infrastructure optimized for AI workloads. This enables low-latency inference, efficient model deployment, and reliable data management.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="col-md-4">
             <div class="service left-icon probootstrap-animate">
               <div class="icon">
                 <i class="icon-office"></i>
@@ -144,11 +165,11 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div class="row">
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="service left-icon probootstrap-animate">
               <div class="icon">
                 <i class="icon-pencil2"></i>
@@ -163,23 +184,9 @@
                 </p>
               </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service left-icon probootstrap-animate">
-              <div class="icon">
-                <i class="icon-cloud-check"></i>
-              </div>
-              <div class="text">
-                <h3 class="heading">Cloud Migration</h3>
-                <p>
-                  Cloud is the future of technology. Don’t be afraid of getting
-                  left behind. Act now and let us help you make the move to
-                  fast, efficient, and secure cloud services.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
+          </div> -->
+          
+          <!-- <div class="col-md-4">
             <div class="service left-icon probootstrap-animate">
               <div class="icon">
                 <i class="icon-cogs"></i>
@@ -194,27 +201,53 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div class="row">
           <div class="col-md-4">
             <div class="service left-icon probootstrap-animate">
               <div class="icon">
-                <i class="icon-calculator"></i>
+                <i class="icon-cogs"></i>
               </div>
               <div class="text">
-                <h3 class="heading">AI Solution Integrations</h3>
+                <h3 class="heading">Generative AI Integrations</h3>
                 <p>
-                  If you want to leverage the power of artificial intelligence
-                  for your business or nonprofit, we can help you with that
-                  also. We can integrate AI solutions that enhance your
-                  performance, efficiency, and innovation.
+                  Leverage the power of LLMs, embeddings, and RAG pipelines. We integrate AI solutions into your existing workflows to improve efficiency, personalization, and decision-making.
                 </p>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
+            <div class="service left-icon probootstrap-animate">
+              <div class="icon">
+                <i class="icon-bubble"></i>
+              </div>
+              <div class="text">
+                <h3 class="heading">LLM & RAG Pipelines</h3>
+                <p>
+                  Deploy retrieval-augmented generation pipelines that combine foundation models with your data. Improve search, summarization, and content automation while keeping inference secure and scalable.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="service left-icon probootstrap-animate">
+              <div class="icon">
+                <i class="icon-link"></i>
+              </div>
+              <div class="text">
+                <h3 class="heading">Prompt Engineering & Fine-Tuning</h3>
+                <p>
+                  Optimize AI outputs with tailored prompt design and model fine-tuning. Achieve higher relevance, lower latency, and more accurate results for your organization’s workflows.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="col-md-4">
             <div class="service left-icon probootstrap-animate">
               <div class="icon">
                 <i class="icon-image"></i>
@@ -229,7 +262,8 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
+
         </div>
       </div>
     </section>
@@ -237,23 +271,16 @@
 
     <div class="container">
       <div class="probootstrap-cta probootstrap-animate border-bototm-none">
-        <h2 class="mb20">Need to Revamp Your Technology?</h2>
+        <h2 class="mb20">Need to Revamp Your Technology With AI?</h2>
         <p>
-          You have good technology solutions, but you want to make them better.
-          We can help you improve those solutions for less, by providing you
-          with affordable and high-quality web app and mobile app design and
-          development, logo design, architectural design, 3D design and model
-          building, cloud migration and AI solution integrations that empower
-          you to grow your business or nonprofit, and make a positive impact in
-          the world.
+          You have existing solutions but want to make them smarter and more efficient. We provide affordable, enterprise-grade generative AI - LLMs, embeddings, RAG pipelines, and secure integrations - that help nonprofits and SMBs enhance operations while driving social impact.
         </p>
         <p>
-          Don’t settle for less. Contact us today, and let us show you how we
-          can upgrade your technology and support meaningful social causes.
+          Don’t settle. Contact us today to upgrade your technology and support education, health, and environmental initiatives in West Africa.
         </p>
         <p>
           <a href="/contact/" role="button" class="btn btn-primary"
-            >Let's Connect</a
+            >Upgrade With AI</a
           >
         </p>
       </div>
@@ -268,11 +295,7 @@
             <div class="probootstrap-footer-widget">
               <h4 class="heading">About LynxSphynx Co.</h4>
               <p>
-                We are LynxSphynx Co., a social enterprise that marries
-                technology and social impact. We help deliver a solution with a
-                precision to non-profits & small and medium-sized businesses
-                (SMBs), by providing them with innovative and affordable
-                technology solutions.
+                LynxSphynx Co. is a social enterprise uniting generative AI with social impact. We deliver precise, affordable AI solutions for nonprofits and SMBs - helping them innovate, scale, and focus on their mission.
               </p>
             </div>
           </div>
@@ -303,13 +326,18 @@
         <div class="row copyright">
           <div class="col-md-6">
             <div class="probootstrap-footer-widget">
-              <p>&copy; 2024 LynxSphynx Co. All Rights Reserved.</p>
+              <p>&copy; 2025 LynxSphynx Co. All Rights Reserved.</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="probootstrap-footer-widget right">
               <ul class="probootstrap-social">
                 <li>
+                  <a href="https://www.linkedin.com/in/rofyray/"
+                    ><i class="icon-linkedin"></i
+                  ></a>
+                </li>
+                <!-- <li>
                   <a href="https://twitter.com/rofy_ray"
                     ><i class="icon-twitter"></i
                   ></a>
@@ -318,7 +346,7 @@
                   <a href="https://www.instagram.com/rofyray/"
                     ><i class="icon-instagram2"></i
                   ></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
